--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
+  },
+  "devDependencies": {
+    "react-social-icons": "^4.1.0"
   }
 }
